--- a/mornitor.html
+++ b/mornitor.html
@@ -50,7 +50,9 @@ License: For each use you must have a valid license purchased only from above li
         type="text/css" />
 
     <style>
-
+        .f_green{
+            color: #006838;
+        }
     </style>
     <!--end::Global Stylesheets Bundle-->
     <script>
@@ -107,7 +109,7 @@ License: For each use you must have a valid license purchased only from above li
                                                                     <div class="card-body d-flex align-items  center">
 
                                                                         <span
-                                                                            class="text-gray-900 parent-hover-primary fs-2 fw-bold  text-center">
+                                                                            class=" text-gray-900 parent-hover-primary fs-2 fw-bold  text-center f_green">
                                                                             Smart Watch
                                                                         </span>
                                                                     </div>
@@ -120,7 +122,7 @@ License: For each use you must have a valid license purchased only from above li
                                                                     <div class="card-body d-flex align-items">
 
                                                                         <span
-                                                                            class="text-gray-900 parent-hover-primary fs-2 fw-bold">
+                                                                            class="  text-gray-900 parent-hover-primary fs-2 fw-bold f_green">
                                                                             Camera
                                                                         </span>
                                                                     </div>
@@ -160,7 +162,7 @@ License: For each use you must have a valid license purchased only from above li
                                                             <div class="d-flex align-items-center mb-2">
                                                                 <!--begin::Title-->
                                                                 <span
-                                                                    class="fs-2 fw-bold text-gray-800 me-2 lh-1 ls-n2">ข้อมูล
+                                                                    class=" fs-2 fw-bold me-2 lh-1 ls-n2 f_green">ข้อมูล
                                                                     Smart Watch </span>
                                                                 <!--end::Title-->
 
@@ -177,7 +179,7 @@ License: For each use you must have a valid license purchased only from above li
                                                     <!--end::Header-->
                                                     <!--begin::Body-->
                                                     <div class="card-body pt-0 pb-1">
-                                                        <h6 class="mb-8 fw-bolder fs-4">ข้อมูลการบันทึกล่าสุด </h6>
+                                                        <h6 class="mb-8 fw-bolder fs-4 f_green">ข้อมูลการบันทึกล่าสุด </h6>
 
                                                         <div class="row">
 
@@ -185,7 +187,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                                             <div class="row">
                                                                 <div class="mb-12 col-md">
-                                                                    <div class="fw-bold text-gray-800 fs-4">
+                                                                    <div class="fw-bold  fs-4 f_green">
                                                                         วันที่อัปเดตข้อมูล
                                                                     </div>
                                                                     <div class="fw-semibold text-gray-600 fs-4"
@@ -198,32 +200,32 @@ License: For each use you must have a valid license purchased only from above li
 
                                                             <div class="row">
                                                                 <div class="mb-12 col-md">
-                                                                    <div class="fw-bold text-gray-800 fs-4">อุณหภูมิ
+                                                                    <div class="fw-bold  fs-4 f_green">อุณหภูมิ
                                                                     </div>
                                                                     <div class="fw-semibold text-gray-600 fs-4"
-                                                                        id="txt_temperature">36.8</div>
+                                                                        id="txt_temperature">-</div>
                                                                 </div>
                                                                 <div class="mb-12 col-md">
-                                                                    <div class="fw-bold text-gray-800 fs-4">
+                                                                    <div class="fw-bold  fs-4 f_green">
                                                                         อัตราการเต้นของหัวใจ
                                                                     </div>
                                                                     <div class="fw-semibold text-gray-600 fs-4"
-                                                                        id="txt_heart_rate">105</div>
+                                                                        id="txt_heart_rate">-</div>
                                                                 </div>
                                                                 <div class="mb-12 col-md">
-                                                                    <div class="fw-bold text-gray-800 fs-4">ความดันโลหิต
+                                                                    <div class="fw-bold  fs-4 f_green">ความดันโลหิต
                                                                     </div>
                                                                     <div class="fw-semibold text-gray-600 fs-4"
-                                                                        id="txt_sbp">105
+                                                                        id="txt_sbp">-
                                                                     </div>
                                                                 </div>
                                                                 <div class="mb-12 col-md">
-                                                                    <div class="fw-bold text-gray-800 fs-4">
+                                                                    <div class="fw-bold  fs-4 f_green">
                                                                         ออกซิเจนในเลือด
                                                                     </div>
                                                                     <div class="fw-semibold text-gray-600 fs-4"
                                                                         id="txt_spo2">
-                                                                        105</div>
+                                                                        -</div>
                                                                 </div>
 
 
@@ -251,7 +253,7 @@ License: For each use you must have a valid license purchased only from above li
                                                         <!--begin::Title-->
                                                         <h3 class="card-title align-items-start flex-column">
                                                             <span
-                                                                class="card-label fw-bold text-dark">ประวัติการบันทึก</span>
+                                                                class="card-label fw-bold  f_green" style="color: #006838;">ประวัติการบันทึก</span>
                                                             <!-- <span class="text-gray-400 mt-1 fw-semibold fs-6">1,046 Inbound Calls today</span> -->
                                                         </h3>
                                                         <!--end::Title-->
