--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ License: For each use you must have a valid license purchased only from above li
                                             <!--begin::Title-->
                                             <h1
                                                 class="page-heading d-flex text-dark fw-bolder fs-1 flex-column justify-content-center my-0">
-                                                eCommerce Dashboard</h1>
+                                                eCommerce Dashboard XXCXXXX</h1>
                                             <!--end::Title-->
                                         </div>
                                         <!--end::Page title-->
